compiler/tests/ar/errors/pure_vec_mut_ar.salam
// لغة: العربية
// EXPECT: E012
نقي دالة املأ(n صحيح٣٢) صحيح٣٢:
    متغير v Vector<صحيح٣٢> = Vector {}
    v.push(n)
    أرجع v.len()
نهاية

دالة الرئيسية:
    اطبع(املأ(3))
نهاية
